# fs2a

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  RELEASE.md  justfile  newclass.sh  newsingleton.sh
cfg/: astylerc
chk/: CMakeLists.txt  child.cpp  chk.cpp  connpool.cpp  coolenum.cpp  coolenum.def  functions.cpp  logger.cpp  naivedate.cpp  naivetime.cpp  observing.cpp  readcsv.cpp  singleton.cpp  table.cpp  threadedtasker.cpp
cmake/modules/: FindJsoncpp.cmake  FindPQXX.cmake
dkr/: docker-compose.yml  make.conf
dkr/base/: Dockerfile  make.conf  q
dkr/bld/: Dockerfile
dkr/ubuntubase/: Dockerfile
examples/CoolEnum/: someenum.cpp  someenum.def  someenum.h  someenum.hpp
hdr/fs2a/: Base64.h  Base64.hpp  Child.hpp  ConnPool.h  CoolEnum.cpp.hpp  CoolEnum.h.h  CoolEnum.hpp.hpp  CsvWriter.h  CsvWriter.hpp  HeaderedTable.h  HeaderedTable.hpp  IOctxtWrapper.h  IOctxtWrapper.hpp  Logger.h  Logger.hpp  NaiveDate.h  NaiveDate.hpp  NaiveTime.h  Observable.h  Observable.hpp  Observer.h  Observer.hpp  Semaphore.h  Singleton.h  Singleton.hpp  Table.h  Table.hpp  Tokenize.h  Tracer.h  commondefs.hpp  functions.h  readCSV.h  readCSV.hpp  roman.h  run.h  runchecks.h  timespecops.hpp
src/: Base64.h  Boilerplate.cpp  Boilerplate.h  CMakeLists.txt  Child.cpp  ConnPool.cpp  ConnPool.h  CsvReader.cpp  CsvReader.h  CsvWriter.cpp  CsvWriter.h  HeaderedTable.cpp  HeaderedTable.h  IOctxtWrapper.cpp  IOctxtWrapper.h  IOsvcWrapper.cpp  IOsvcWrapper.h  Logger.cpp  Logger.h  NaiveDate.cpp  NaiveTime.cpp  Observable.h  Observer.h  Semaphore.cpp  Semaphore.h  Singleton.h  Table.h  ThreadedTasker.cpp  ThreadedTasker.h  Tokenize.cpp  Tokenize.h  Tracer.cpp  Tracer.h  common.h  commondefs.h  fs2a.h  functions.cpp  functions.h  readCSV.cpp  readCSV.h  (+10 more)
src/CoolEnum/: CoolEnum.cpp  CoolEnum.h  someenum.cpp  someenum.def  someenum.h
src/webapp/: WebApp.cpp  WebApp.h
src/websockets/: WsBoilerplate.h  WsClient.cpp  WsClient.h  WsServer.cpp  WsServer.h  asioNoLog.h  asioTlsClientNoLog.h
